force-app/main/default/objects/Contact/fields/Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID__c</fullName>
    <label>Parent ID</label>
    <description>Unique parent ID copied from Lead.Parent_1_ID__c or Lead.Parent_2_ID__c at convert time. Populated only on Parent record-type Contacts.</description>
    <length>32</length>
    <type>Text</type>
</CustomField>