force-app/main/default/objects/Contact/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOM Scheduled</fullName>
            </value>
            <value>
                <fullName>SOM Completed</fullName>
            </value>
            <value>
                <fullName>1062633550</fullName>
                <label>(WIP) Upcoming Students</label>
            </value>
            <value>
                <fullName>1083265542</fullName>
                <label>FSS Onboarding</label>
            </value>
            <value>
                <fullName>266117750</fullName>
                <label>New Students</label>
            </value>
            <value>
                <fullName>266117751</fullName>
                <label>In Program</label>
            </value>
            <value>
                <fullName>266117752</fullName>
                <label>Graduated</label>
            </value>
            <value>
                <fullName>266754070</fullName>
                <label>Transfer</label>
            </value>
            <value>
                <fullName>936529426</fullName>
                <label>Paused</label>
            </value>
            <value>
                <fullName>1029396323</fullName>
                <label>Terminated</label>
            </value>
            <value>
                <fullName>1077888160</fullName>
                <label>Terminated - MBG</label>
            </value>
            <value>
                <fullName>1089129246</fullName>
                <label>Manually added student</label>
            </value>
            <value>
                <fullName>1308099661</fullName>
                <label>Pending Termination - No Payment Due</label>
            </value>
            <value>
                <fullName>1308099660</fullName>
                <label>Pending Termination - Payment Still Due</label>
            </value>
            <value>
                <fullName>Booked Call</fullName>
                <isActive>false</isActive>
                <label>Booked Call</label>
            </value>
            <value>
                <fullName>Closed Won</fullName>
                <isActive>false</isActive>
                <label>Closed Won</label>
            </value>
            <value>
                <fullName>Closed lost</fullName>
                <isActive>false</isActive>
                <label>Closed lost</label>
            </value>
            <value>
                <fullName>Confirmed (contract sent)</fullName>
                <isActive>false</isActive>
                <label>Confirmed (contract sent)</label>
            </value>
            <value>
                <fullName>Decision (1 week)</fullName>
                <isActive>false</isActive>
                <label>Decision (1 week)</label>
            </value>
            <value>
                <fullName>First Meeting</fullName>
                <isActive>false</isActive>
                <label>First Meeting</label>
            </value>
            <value>
                <fullName>Info Verified</fullName>
                <isActive>false</isActive>
                <label>Info Verified</label>
            </value>
            <value>
                <fullName>Initial Consultation</fullName>
                <isActive>false</isActive>
                <label>Initial Consultation</label>
            </value>
            <value>
                <fullName>Interview</fullName>
                <isActive>false</isActive>
                <label>Interview</label>
            </value>
            <value>
                <fullName>Needs Analysis</fullName>
                <isActive>false</isActive>
                <label>Needs Analysis</label>
            </value>
            <value>
                <fullName>Negotiation</fullName>
                <isActive>false</isActive>
                <label>Negotiation</label>
            </value>
            <value>
                <fullName>Payment</fullName>
                <isActive>false</isActive>
                <label>Payment</label>
            </value>
            <value>
                <fullName>Proposal</fullName>
                <isActive>false</isActive>
                <label>Proposal</label>
            </value>
            <value>
                <fullName>Qualification</fullName>
                <isActive>false</isActive>
                <label>Qualification</label>
            </value>
            <value>
                <fullName>Strategy Overview</fullName>
                <isActive>false</isActive>
                <label>Strategy Overview</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>