force-app/main/default/objects/Contact/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <label>Student ID</label>
    <description>Unique student ID copied from Lead.Student_ID_1__c / 2 / 3 at convert time. Populated only on Student record-type Contacts.</description>
    <length>32</length>
    <type>Text</type>
</CustomField>